--- a/students-backend/students-backend/pom.xml
+++ b/students-backend/students-backend/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.nicolas</groupId>
-	<artifactId>students_backend</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>students-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>students_backend</name>
+	<name>students-backend</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
